 - Support for loop-else added. E.g.:
		for(var i=0;i<10;++i){
			if( searchForSomething(i) )
				break; // found!
		}else{
			outln("something not found...");
			return;
		}
 - Support for @(once) added: Statements can be annotated to be called only once. e.g.
		fn(){
			@(once) thisFn.staticCounter := 0; // this is only executed once
			return ++thisFn.staticCounter;
		};

Internals:
 - string hanling updated
 - minor fixes and cleanups
 
C++-Api:
  - old ES_FUNCTION macro removed; ES_FUNCTION2 renamed to ES_FUNCTION
 

Libs:
 IOLib: 
  - filePutContents -> saveTextFile
  - fileGetContents -> loadTextFile
 
--------------------------------------------
EScript 0.6.6 Eduard (Stable version)
Release: 2013-02-10

General:
 - Named after Eduard the Great Rabbit

Internals:
 - (bugfix) Missing conversion from "const char *" to RtValue added.
 

C++-Api:
 - Number of necessary headers reduced: Normally, a binding's header needs only to 
    include the header of the (ext)reference object (<EScript/Objects/ReferenceObject.h>).
	Everything needed for a basic implementation in the binding's .cpp file is included in
	<EScript/Basics.h>. If additional standard types are needed (Number,Bool,String,Array, or Map)
	the additional header <EScript/StdObjects.h> can be included.
 - Helper:
    - declareObjectFunction(...) added.
 - New function macros introduced: ES_CONSTRUCTOR, ES_CTOR, ES_FUNCTION2(to be renamed), ES_FUN, 
	ES_MFUNCTION, and ES_MFUN. The new macros allow direct conversion to the desired C++-type 
	(instead of the EScript wrapper type). Explicit conversion of a function's result into an 
	EScript object is also no longer necessary in most cases. 
	The available parameters are:
	- rt (the runtime, formerly named 'runtime')
	- parameter (array of parameters; same as before)
	- thisObj (the object of the desired type -- c++ object or the EScript wrapper object. 
		Replaces the former 'self' or '**self'.)